Add User controller
