# src/controllers/user/user.routes.go
@@ -1,0 +1,7 @@
+package user
+
+import "github.com/gofiber/fiber/v2"
+
+func Routes(api fiber.Router) {
+	api.Post("/login", loginUser)
+}
